--- a/pages/products.html
+++ b/pages/products.html
@@ -11,16 +11,16 @@
 <body>
     <ul>
         <li>
-            <a href="/">home</a>
+            <a href="../index.html">home</a>
         </li>
         <li>
-            <a href="about.html">about</a>
+            <a href="../about.html">about</a>
         </li>
         <li>
-            <a href="pages/orders.html">Orders</a>
+            <a href="/pages/orders.html">Orders</a>
         </li>
         <li>
-            <a href="pages/products.html">Products</a>
+            <a href="/pages/products.html">Products</a>
         </li>
     </ul>
         <h1>Products</h1>
